# dream-ink

./: .gitignore  CLAUDE.md  README.md  demo.tape  pyproject.toml
.claude/: settings.local.json
config/: dreamink.toml  styles.toml
dreamink/: __init__.py  cli.py  config.py  expander.py  exporter.py  illustrator.py  journal.py  models.py  pipeline.py  postprocess.py  progress.py  storage.py  tagger.py  utils.py
journal/: dream_journal.md
tests/: test_config.py  test_expander.py  test_exporter.py  test_illustrator.py  test_journal.py  test_models.py  test_pipeline.py  test_postprocess.py  test_storage.py  test_tagger.py
