[project]
name = "dreamink"
version = "0.1.0"
description = "Transform raw dream notes into rich visual illustrations"
authors = [
    {name = "Erin Burke"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.3,<2.0",
    "pillow>=10.0,<11.0",
    "click>=8.0,<9.0",
    "httpx>=0.25,<1.0",
    "pydantic>=2.0,<3.0",
    "python-dotenv (>=1.2.2,<2.0.0)",
]

[project.scripts]
dreamink = "dreamink.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
